--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -24,8 +24,9 @@ Vagrant.configure(2) do |config|
 
   # Create a forwarded port mapping which allows access to a specific port
   # within the machine from a port on the host machine. In the example below,
-  # accessing "localhost:8080" will access port 80 on the guest machine.
-  config.vm.network "forwarded_port", guest: 80, host: 8080, auto_correct: true
+  # accessing "localhost:8000" will access port 80 on the guest machine.
+  config.vm.network "forwarded_port", guest: 80, host: 8000, auto_correct: true
+  config.vm.network "forwarded_port", guest: 443, host: 8050, auto_correct: true
 
   # Create a private network, which allows host-only access to the machine
   # using a specific IP.
@@ -51,7 +52,11 @@ Vagrant.configure(2) do |config|
       vb.name = "VB Name" #Change to something spceific about your project
 
   #   # Customize the amount of memory on the VM:
-      vb.memory = "768"
+      vb.memory = "1024"
+  #   # Customize the amount of cpu's on the VM (recommend no more than 2):
+      vb.cpus = 2
+  #   # When using more than 1 core enable I/O APIC (Should be default but just in case we set this here):
+      vb.customize ["modifyvm", :id, "--ioapic", "on"]
   end
 
 
